[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-cognito-lowlevel"
version = "0.1.8"
authors = [
  { name="Pulsely", email="python@pulsely.com" },
]
description = "Django package for AWS Cognito authentication in low level"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["django", "cognito"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
install_requires = [
  "colorama",
  'Django >= 4.0.0',
  'python-jose >= 3.3.0',
  "requests"
]

[project.urls]
"Homepage" = "https://github.com/pulsely/django-cognito-lowlevel"
"Bug Tracker" = "https://github.com/pulsely/django-cognito-lowlevel/issues"
